--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </main>
     <footer>
         <p>
-            Site criado por <a href="https://github.com/gustavoguanabara/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a>.
+            Site criado por <a href="https://github.com/MariaClaraRodrigues" target="_blank">Maria Clara</a>
         </p>
     </footer>
 </body>
